feat: add opção de movimento para os ativos na carteira
