# investment-manager/pkg/api/v1/request/carteira_ativo_request.go
@@ -3,4 +3,5 @@ package request
 type CarteiraAtivoRequest struct {
 	Codigo            string
 	ProporcaoDesejada float64
+	Movimento         string
 }
