# investment-manager/pkg/db/model/carteira_ativo.go
@@ -5,16 +5,18 @@ type CarteiraAtivo struct {
 	CarteiraId        uint    `gorm:"column:carteira_id"`
 	Codigo            string  `gorm:"column:codigo"`
 	ProporcaoDesejada float64 `gorm:"column:proporcao_desejada"`
+	Movimento         string  `gorm:"column:movimento"`
 }
 
 func (CarteiraAtivo) TableName() string {
 	return "carteira_ativo"
 }
 
-func NewCarteiraAtivo(carteiraId uint, codigo string, proporcaoDesejada float64) *CarteiraAtivo {
+func NewCarteiraAtivo(carteiraId uint, codigo string, proporcaoDesejada float64, movimento string) *CarteiraAtivo {
 	return &CarteiraAtivo{
 		CarteiraId:        carteiraId,
 		Codigo:            codigo,
 		ProporcaoDesejada: proporcaoDesejada,
+		Movimento:         movimento,
 	}
 }
